--- a/keyboards/ferris/sweep/keymaps/qwerty/layout.yaml
+++ b/keyboards/ferris/sweep/keymaps/qwerty/layout.yaml
@@ -19,7 +19,7 @@ layers:
     - [{t: TO(NAV)}, {t: OSM Shift}, {type: held}, Space]
   BASE_SHIFT_ALT:
     - [null, "€", null, "£", null, null, null, null, null, null]
-    - [null, null, null, null, null, null, "{", "!", "}", "Shift+Enter"]
+    - ["Shift+Tab", null, null, null, null, null, "{", "!", "}", "Shift+Enter"]
     - [null, "“", "‘", "’", "”", null, "<", null, ">", null]
     - [{t: TO(NAV)}, {type: held}, {type: held}, Space]
   NAV:
