Add MOUSE layer for one-handed operation
Implements a new layer (layer 3) activated by holding both left thumb keys,
designed for one-handed operation while using trackpad with right hand.

**Left hand - One-handed commands:**
- Top row: Cmd+1 through Cmd+5 (tab switching in Chrome)
- Home row:
  - A: Tab (Cmd+Tab when holding D for app switching)
  - S: Cmd+Shift+Tab (reverse app switching)
  - D: Custom mod-tap (tap=Cmd+` for window switching, hold=Cmd modifier)
  - F: Cmd+Shift+` (reverse window switching)
  - G: Ctrl+Down
- Bottom row: Cmd+[/], Cmd+Shift+[/] (browser navigation)

**Right hand - Mouse control (vim hjkl pattern):**
- Top row: Scroll left/down/up/right
- Middle row: Mouse cursor left/down/up/right
- Bottom row: Left click, Repeat key, Right click

**Implementation:**
- Enabled MOUSEKEY_ENABLE for mouse key support
- Added combo (both left thumbs) triggers MO(3)
- Custom mod-tap handling for D key via process_record_user()
- Uses MS_LEFT, MS_DOWN, MS_UP, MS_RGHT for mouse movement
- Uses MS_WHLL, MS_WHLD, MS_WHLU, MS_WHLR for scrolling
- Uses MS_BTN1, MS_BTN2 for mouse clicks

Firmware size: 27548/28672 bytes (96%, 1124 bytes free)

--- a/keyboards/ferris/sweep/keymaps/qwerty/layout.yaml
+++ b/keyboards/ferris/sweep/keymaps/qwerty/layout.yaml
@@ -42,7 +42,13 @@ layers:
     - ["Å", "Í", "Î", "Ï", "Ì", "Ó", "Ô", "", "Ò", "Ú"]
     - ["Û", "Ù", "Ç", "◊", "ı", "ˆ", "˜", "¯", "˘", "¿"]
     - [{t: TO(BASE)}, {type: held}, Trans, {t: TO(BASE)}]
+  MOUSE:
+    - ["Cmd+1", "Cmd+2", "Cmd+3", "Cmd+4", "Cmd+5", "Scroll ←", "Scroll ↓", "Scroll ↑", "Scroll →", null]
+    - ["Tab (Cmd+Tab w/D)", "Cmd+Shift+Tab", {h: Cmd, t: "Cmd+`"}, "Cmd+Shift+`", "Ctrl+Down", "Mouse ←", "Mouse ↓", "Mouse ↑", "Mouse →", null]
+    - ["Cmd+[", "Cmd+]", "Cmd+Shift+[", "Cmd+Shift+]", null, null, "Left Click", Repeat, "Right Click", null]
+    - [{type: held}, {type: held}, Trans, Trans]
 combos:
   - {p: [0, 1], k: "Esc+Tab combo", l: ["BASE"], a: top}
   - {p: [8, 9], k: "Special combo", l: ["BASE"], a: top}
   - {p: [12, 17, 33], k: "Cmd+Space (Spotlight)", l: ["BASE"], a: top}
+  - {p: [30, 31], k: "MOUSE layer (hold both left thumbs)", l: ["BASE"], a: top}
